# Kaist_Mobility_Challenge

./: .gitignore  Dockerfile  README.md  entrypoint.sh  package.xml  setup.cfg  setup.py  setup_host_fastdds.sh
config/: v2v_bridge.yaml
pkg_p1_1/: package.xml  setup.cfg  setup.py
pkg_p1_1/config/: p1_bridge.yaml
pkg_p1_1/launch/: competition.launch.py
pkg_p1_1/pkg_p1_1/: p1_1.py
pkg_p1_2/: CMakeLists.txt  p1_2  package.xml  setup.cfg  setup.py
pkg_p1_2/config/: v2v_bridge.yaml  zone_database.json
pkg_p1_2/launch/: competition.launch.py
pkg_p1_2/msg/: V2VState.msg
pkg_p1_2/pkg_p1_2/: Collision_Avoidance.py  p1_2.py
pkg_p1_2/waypoints/: path_cav1.json  path_cav2.json
pkg_p2/: package.xml  setup.cfg  setup.py
pkg_p2/config/: p2_bridge.yaml
pkg_p2/launch/: competition.launch.py
pkg_p2/pkg_p2/: p2.py
pkg_p2/waypoints/: p2_lane3.json
pkg_p3/: CMakeLists.txt  p3  package.xml  setup.cfg  setup.py
pkg_p3/config/: 3_zone_database.json  bridge_cav1.yaml  bridge_cav2.yaml  bridge_cav3.yaml  bridge_cav4.yaml
pkg_p3/launch/: competition.launch.py
pkg_p3/msg/: V2VState.msg
pkg_p3/pkg_p3/: Collision_Avoidance3.py  p3.py
pkg_p3/waypoints/: 3_cav1.json  3_cav2.json  3_cav3.json  3_cav4.json
smyd/: Collision_Avoidance.py  collision_avoidance.py  conflict_map_p1_2.json  p1_1.py  p1_1_follower.py  p1_2_cav1.py  p1_2_cav2.py  p1_2_follower_cav1.py  p1_2_follower_cav2.py
smyd/tools/: conflict_map_p1_2.json  p1_2_cav2  zone_database.json  zone_generator.py
